navbar colors changed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9642,9 +9642,9 @@ html {
  * Navbar
  */
 
-.navbar {
+/* .navbar {
   background-image: linear-gradient(to right, #094a62f1 0%, #3c4449e1 100%);
-}
+} */
 
 .navbar-brand {
   padding-top: .75rem;
