--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9624,7 +9624,7 @@ html {
 }
 
 .sidebar .nav-link.active {
-  color: #094b62;
+  color: #094a62f1;
   font-size: 1.325em;
 }
 
@@ -9642,9 +9642,9 @@ html {
  * Navbar
  */
 
-.navbar {
+/* .navbar {
   background-image: linear-gradient(to right, #094a62f1 0%, #3c4449e1 100%);
-}
+} */
 
 .navbar-brand {
   padding-top: .75rem;
